Fix hero padding on mobile

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -337,6 +337,9 @@
 }
 
 @media (max-width: 600px) {
+  .header {
+    padding: 1rem 0;
+  }
   .title {
     font-size: 48px;
   }
